--- a/.github/workflows/checkin.yaml
+++ b/.github/workflows/checkin.yaml
@@ -25,5 +25,5 @@ jobs:
       env:
         GO111MODULE: "on"
         SMZDM_COOKIE: ${{ secrets.SMZDM_COOKIE }}
-        QMSGKEY: ${{ secrets.QMSGKEY }}
+        CHANIFY_TOKEN: ${{ secrets.CHANIFY_TOKEN }}
       run: go build -o checkin checkin.go && ./checkin
